<resources>
    <string name="app_name" translatable="false">The Digital Register</string>
    <string name="app_bar_main">The Digital Register</string>
    <string name="login">Login</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="please_wait">Please wait…</string>
    <string name="fill_inputs">Please fill in the required inputs.</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="open">Open</string>
    <string name="you_are_offline">You are offline!</string>
    <string name="group_1">Group 1</string>
    <string name="group_2">Group 2</string>
    <string name="time">Time</string>
    <string name="students">Students</string>
    <string name="absences">Absences</string>
    <string name="save">Save</string>
    <string name="this_student_is_absent">This student is already marked as absent!</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="change_email">Change email address</string>
    <string name="new_email">New email Address</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="app_availability">This app is only available for professors.</string>
    <string name="current_role_false">Your current role doesn\'t allow you to use this app.</string>
    <string name="restart_to_change_the_language">Please restart the app to apply changes.</string>
    <string name="exit_q">Exit?</string>
    <string name="changes_not_save">Changes Won\'t Be Saved!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_recent">Your documents will appear here.</string>
    <string name="arrow" translatable="false"><![CDATA[->]]></string>
    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="create_account">Create an account</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="subject">Subject*</string>
    <string name="_1s" translatable="false">1S (ex. 1,2)</string>
    <string name="_2sc" translatable="false">2Sc (ex. 1,2)</string>
    <string name="_3m" translatable="false">3M (ex. 1,2)</string>
    <string name="_3sc" translatable="false">3Sc (ex. 1,2)</string>
    <string name="_4l" translatable="false">4L (ex. 1,2)</string>
    <string name="_4m" translatable="false">4M (ex. 1,2)</string>
    <string name="_4sc" translatable="false">4Sc (ex. 1,2)</string>
    <string name="_4t" translatable="false">4T (ex. 1,2)</string>
    <string name="account_information">Account information</string>
    <string name="user_s_information">User\'s information</string>
    <string name="permission_code">Permission code</string>
    <string name="code">Code*</string>
    <string name="sign_up">Sign up</string>
    <string name="permission_not_exist">Permission code does not exist!</string>
    <string name="permission_low">The permission level is low!</string>
    <string name="new_registration">New</string>
    <string name="review">Review</string>
    <string name="deleting">Deleting…</string>
    <string name="delete_doc">Delete this document?</string>
    <string name="delete_info">Data can\'t be restored after deleting!</string>
    <string name="select_language">Select a language</string>
    <string name="logout_q">Logout?</string>
    <string name="logout_info">Login data won\'t be saved!</string>
    <string name="exit_now">Exit now</string>
    <string name="option_10_r">10 (recommended)</string>
    <string name="option_15" translatable="false">15</string>
    <string name="option_20" translatable="false">20</string>
    <string name="option_25" translatable="false">25</string>
    <string name="select_num_docs">Select the number of documents to display</string>
    <string name="option_10" translatable="false">10</string>
    <string name="updating">Updating…</string>
    <string name="email_updated">Email address updated successfully!</string>
    <string name="hours_24_r">24 hours (recommended)</string>
    <string name="am_pm" translatable="false">AM/PM</string>
    <string name="hours_24">24 hours</string>
    <string name="password_updated">Password updated successfully!</string>
    <string name="select_appearance">Select the appearance</string>
    <string name="v" translatable="false">v</string>
    <string name="dev_email_address" translatable="false">aminbadh@gmail.com</string>
    <string name="feedback_from" translatable="false">Feedback from:</string>
    <string name="do_not_delete">---PLEASE DON\'T DELETE THIS---</string>
    <string name="app_package" translatable="false">App package =</string>
    <string name="app_version" translatable="false">App version =</string>
    <string name="select_the_level">Select the level</string>
    <string name="select_the_class">Select the class</string>
    <string name="setting_up">Setting up…</string>
    <string name="class_text">Class</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="no_selected_students">No selected students</string>
    <string name="number_of_documents">Number of documents</string>
    <string name="time_picker">Time picker appearance</string>
    <string name="change_your_current_e_mail_address">Change your current email address.</string>
    <string name="change_your_current_password">Change your current password.</string>
    <string name="send_feedback">Send feedback</string>
    <string name="tell_us_your_questions_we_re_happy_to_help">Got any queries? We\'re happy to help!</string>
    <string name="made_in_lpm">Made in LPM</string>
    <string name="absent">Absent</string>
    <string name="save_doc_q">Save the document?</string>
    <string name="save_doc_info">The absences list can\'t be changed after saving!</string>
    <string name="create_account_admin">Don\'t have an account?\nContact the administration to create one.</string>
</resources>